Data entry system forms. Dish/Restaurant/Blogs now working.

--- a/data_entry/templates/de_base.html
+++ b/data_entry/templates/de_base.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="{% static 'css/demain.css' %}" />
     <link rel="stylesheet" href="{% static 'css/webmain.css' %}" />
+    {{form.media}}
   </head>
   <body>
     <nav class="navbar navbar-default">
