--- a/data_entry/templates/de_blog.html
+++ b/data_entry/templates/de_blog.html
@@ -7,5 +7,8 @@
 
   <h2>{{action}} Blog</h2>
   {% bootstrap_messages %}
-  {% include 'de_blogform.html' with blogform=form %}
+  {% include 'de_blogform.html' %}
+  <script>
+    $(document).ready(function(){DE.currentPage = new DE.pageManagers.Blog()})
+  </script>
 {%endblock%}
