--- a/data_entry/templates/de_restaurant.html
+++ b/data_entry/templates/de_restaurant.html
@@ -7,6 +7,7 @@
 <!-- Nav tabs -->
  <ul class="nav nav-tabs" role="tablist">
    <li role="presentation"{%if tab is False %} class="active"{%endif%}><a href="#restaurant" aria-controls="restaurant" role="tab" data-toggle="tab">Restaurant</a></li>
+   <li role="presentation"><a href="#opentimes" aria-controls="opentimes" role="tab" data-toggle="tab">Opening Times</a></li>
    <li role="presentation"{%if tab == 'dishes'%} class="active"{%endif%}><a href="#dishes" aria-controls="dishes" role="tab" data-toggle="tab">Dishes</a></li>
    <li role="presentation"{%if tab == 'blogs'%} class="active"{%endif%}><a href="#blogs" aria-controls="blogs" role="tab" data-toggle="tab">Blogs</a></li>
    <li role="presentation"><a href="#recipes" aria-controls="recipes" role="tab" data-toggle="tab">Recipes</a></li>
@@ -14,87 +15,33 @@
 
  <!-- Tab panes -->
 <div class="tab-content">
+  <div role="tabpanel" class="tab-pane{%if tab == 'opentimes'%} active{%endif%}" id="opentimes">
+    {% if otfset %}
+    <h2>Opening Times <small>@ <em>{{form.instance.name}}</small></em></h2>
+    {% include 'de_opentimeformset.html' with async=True %}
+    {% else %}
+      <h4 class="text-center">Please finish adding a new restaurant before adding its opening times.</h3>
+    {% endif %}
+  </div>
   <div role="tabpanel" class="tab-pane{%if tab is False%} active{%endif%}" id="restaurant">
     <h2>{{action}} Restaurant</h2>
-    <form method="post" action="" style="margin-top:25px;">
-     {% bootstrap_messages %}
-     {% csrf_token %}
-     <div class="row">
-       <div class="col-sm-12">
-         {% bootstrap_field form.name %}
-         {% bootstrap_field form.phone_number %}
-         {% bootstrap_field form.information placeholder='Describe the restaurant'%}
-       </div>
-     </div>
-     <div class="row" style="margin-bottom:20px;">
-       <div class="col-sm-6">
-         <div class="form-group">
-           <label class="control-label" for="id_image">Image</label>
-           {{form.image_url}}
-         </div>
-         {% bootstrap_field form.instagram_user placeholder='username' addon_before='@' %}
-       </div>
-       <div class="col-sm-6">
-         <img src="{{form.image_url.value|default:"https://cdn.feedmeeapp.com/images/1489613123874.jpg"}}" style="max-height:350px;" class="img-responsive pull-right" id="rest_img">
-       </div>
-     </div>
-
-     <div class="row">
-       <div class="col-sm-6">
-        {% bootstrap_field form.address placeholder='123 Some St, Some Suburb, Some City, Some Country' %}
-       </div>
-       <div class="col-sm-3">
-        {% bootstrap_field form.suburb %}
-       </div>
-       <div class="col-sm-3">
-        {% bootstrap_field form.timezone %}
-       </div>
-     </div>
-     <div class="row">
-       <div class="form-group col-sm-6">
-         <label class="control-label" for="id_cuisines">Cuisines</label>
-         <div>{{ form.cuisines }}</div>
-         <div class="bfw-add-item">
-           <a href="#" class="btn btn-success btn-sm" data-modal-open="form" data-form-url="/data-entry/modals/cuisines/?basic=t">Add New Cuisine</a>
-         </div>
-       </div>
-       <div class="form-group col-sm-6">
-         <label class="control-label" for="id_highlights">Highlights</label>
-         <div class="bfw-add-item">
-           <a href="#" class="btn btn-success btn-sm" data-modal-open="form" data-form-url="/data-entry/modals/highlights/?basic=t">Add New Highlight</a>
-         </div>
-         <div>{{ form.highlights }}</div>
-       </div>
-     </div>
-     <div class="row">
-       <div class="col-sm-4">
-        {% bootstrap_field form.quandoo_id %}
-       </div>
-       <div class="col-sm-4">
-        {% bootstrap_field form.delivery_provider %}
-       </div>
-       <div class="col-sm-4">
-        {% bootstrap_field form.delivery_link %}
-       </div>
-     </div>
-     {{form.latitude}}
-     {{form.longitude}}
-     {% bootstrap_button "SUBMIT" button_type="submit" button_class="btn-success btn-block" %}
-    </form>
+    {% include 'de_restaurantform.html'%}
   </div>
   <div role="tabpanel" class="tab-pane{%if tab == 'dishes'%} active{%endif%}" id="dishes">
     {% if dishform %}
       <h2>Add a dish <small>@ <em>{{form.instance.name}}</small></em></h2>
-      {% include 'de_dishform.html' %}
+      {% include 'de_dishform.html' with form=dishform async=True %}
       <hr>
-      <h3>Existing dishes <small>@ <em>{{form.instance.name}}</small></em></h3>
-      <div class="row card-row">
-        {% for dish in dishes %}
-          {% include 'dish_card.html' with admin=True %}
-          {% cycle '' '' '</div><div class="row card-row">' %}
-        {% empty %}
-          <h4 class="text-muted text-center">No existing dishes</h4>
-        {% endfor %}
+      <div id="existing-dishes">
+        <h3>Existing dishes <small>@ <em>{{form.instance.name}}</small></em></h3>
+        <div class="row card-row">
+          {% for dish in dishes %}
+            {% include 'dish_card.html' with admin=True %}
+            {% cycle '' '' '</div><div class="row card-row">' %}
+          {% empty %}
+            <h4 class="text-muted text-center">No existing dishes</h4>
+          {% endfor %}
+        </div>
       </div>
     {%else%}
       <h4 class="text-center">Please finish adding a new restaurant before adding its dishes or blogs</h3>
@@ -103,38 +50,45 @@
   <div role="tabpanel" class="tab-pane{%if tab == 'blogs'%} active{%endif%}" id="blogs">
     {% if blogform %}
       <h2>Add a blog <small>@ <em>{{form.instance.name}}</small></em></h2>
-      {% include 'de_blogform.html' %}
+      {% include 'de_blogform.html' with form=blogform async=True %}
       <hr>
-      <h3>Existing blogs <small>@ <em>{{form.instance.name}}</small></em></h3>
-      <div class="row card-row">
-        {% for blog in blogs %}
-          {% include 'blog_card.html' with admin=True %}
-          {% cycle '' '' '</div><div class="row card-row">' %}
-        {% empty %}
-          <h4 class="text-muted text-center">No existing blogs</h4>
-        {% endfor %}
+      <div id="existing-blogs">
+        <h3>Existing blogs <small>@ <em>{{form.instance.name}}</small></em></h3>
+        <div class="row card-row">
+          {% for blog in blogs %}
+            {% include 'blog_card.html' with admin=True %}
+            {% cycle '' '' '</div><div class="row card-row">' %}
+          {% empty %}
+            <h4 class="text-muted text-center">No existing blogs</h4>
+          {% endfor %}
+        </div>
       </div>
     {%else%}
       <h4 class="text-center">Please finish adding a new restaurant before adding its dishes or blogs</h3>
     {% endif %}
   </div>
-  <div role="tabpanel" class="tab-pane" id="recipes">
+  <div role="tabpanel" class="tab-pane{%if tab == 'recipes'%} active{%endif%}" id="recipes">
     {% if recipeform %}
       <h2>Add a recipe <small>@ <em>{{form.instance.name}}</small></em></h2>
-      {% include 'de_recipeform.html' with formset=recipeformset %}
+      {% include 'de_recipeform.html' with formset=recipeformset form=recipeform async=True %}
       <hr>
-      <h3>Existing recipes <small>@ <em>{{form.instance.name}}</small></em></h3>
-      <div class="row card-row">
-        {% for recipe in recipes %}
-          {% include 'recipe_card.html' with admin=True %}
-          {% cycle '' '' '</div><div class="row card-row">' %}
-        {% empty %}
-          <h4 class="text-muted text-center">No existing recipes</h4>
-        {% endfor %}
+      <div id="existing-recipes">
+        <h3>Existing recipes <small>@ <em>{{form.instance.name}}</small></em></h3>
+        <div class="row card-row">
+          {% for recipe in recipes %}
+            {% include 'recipe_card.html' with admin=True %}
+            {% cycle '' '' '</div><div class="row card-row">' %}
+          {% empty %}
+            <h4 class="text-muted text-center">No existing recipes</h4>
+          {% endfor %}
+        </div>
       </div>
     {% else %}
       <h4 class="text-center">Please finish adding a new restaurant before adding its dishes or blogs</h3>
     {% endif %}
   </div>
 </div>
+<script>
+  $(document).ready(function(){DE.currentPage = new DE.pageManagers.Restaurant()})
+</script>
 {%endblock%}
