--- a/data_entry/templates/de_restaurantform.html
+++ b/data_entry/templates/de_restaurantform.html
@@ -60,6 +60,9 @@
     {% bootstrap_field form.delivery_link %}
   </div>
 </div>
+<hr>
+<h4>Opening Times</h4>
+{% include 'de_opentimeformset.html' %}
 {{form.latitude}}
 {{form.longitude}}
 {{form.time_offset_minutes}}
