--- a/templates/flatpages/website.html
+++ b/templates/flatpages/website.html
@@ -19,6 +19,14 @@
   <link rel="mask-icon" href="{% static 'favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <title>Feedmee - {{ flatpage.title }}</title>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-73297120-1', 'auto');
+    ga('send', 'pageview');
+  </script>
   <script src="{% static 'js/fdme.min.js' %}"></script>
   <link href="https://fonts.googleapis.com/css?family=Muli:400,700" rel="stylesheet">
   <link href="{% static 'css/fdme.min.css' %}" rel="stylesheet" />
