--- a/templates/flatpages/website.html
+++ b/templates/flatpages/website.html
@@ -18,7 +18,7 @@
   <link rel="manifest" href="{% static 'favicon/manifest.json' %}">
   <link rel="mask-icon" href="{% static 'favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
-  <title>Feedmee - {{ flatpage.title }}</title>
+  <title>Feedmee - {{title}}</title>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -31,7 +31,8 @@
   <link href="https://fonts.googleapis.com/css?family=Muli:400,700" rel="stylesheet">
   <link href="{% static 'css/fdme.min.css' %}" rel="stylesheet" />
 </head>
-<body class="{{ flatpage.title.lower }}">
-  {{ flatpage.content }}
+<body class="{{ title.lower }}">
+  {% block content %}
+  {% endblock %}
 </body>
 </html>
