Blog system complete.

--- a/templates/flatpages/events.html
+++ b/templates/flatpages/events.html
@@ -44,7 +44,7 @@
         <li><a href="/impact/">Impact</a></li>
         <li><a href="/events/">Events</a></li>
         <li><a href="/blog/">Blog</a></li>
-        <li class="button-download"><a href="https:&#x2F;&#x2F;itunes.apple.com&#x2F;au&#x2F;app&#x2F;feedmee-discover-food-4-you-eat-out-give-back&#x2F;id1120549992?mt=8" target="_blank">Download</a></li>
+        <li class="button-download"><a href="https://itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8" target="_blank">Download</a></li>
       </ul>
     </div>
     <div class="menu-bg visible-sm visible-xs"></div>
@@ -164,11 +164,11 @@
           <img src="/static/images/feedmee-heart.svg" alt="Feedmee Heart">
         </div>
         <ul class="list-unstyled">
-          <li><a href="https:&#x2F;&#x2F;www.instagram.com&#x2F;feedmeeapp_au&#x2F;"><img src="{% static 'images/instagram.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;www.facebook.com&#x2F;Feedmeeapp&#x2F;"><img src="{% static 'images/facebook.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;twitter.com&#x2F;FeedmeeA"><img src="{% static 'images/twitter.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;www.linkedin.com&#x2F;company-beta&#x2F;13179226&#x2F;"><img src="{% static 'images/linkedin.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;medium.com&#x2F;feedmee-app"><img src="{% static 'images/medium.svg' %}" alt=""></a></li>
+          <li><a href="https://www.instagram.com/feedmeeapp_au/"><img src="{% static 'images/instagram.svg' %}" alt=""></a></li>
+          <li><a href="https://www.facebook.com/Feedmeeapp/"><img src="{% static 'images/facebook.svg' %}" alt=""></a></li>
+          <li><a href="https://twitter.com/FeedmeeA"><img src="{% static 'images/twitter.svg' %}" alt=""></a></li>
+          <li><a href="https://www.linkedin.com/company-beta/13179226/"><img src="{% static 'images/linkedin.svg' %}" alt=""></a></li>
+          <li><a href="https://medium.com/feedmee-app"><img src="{% static 'images/medium.svg' %}" alt=""></a></li>
         </ul>
       </div>
       <div class="term-links">
