--- a/templates/flatpages/fp_base.html
+++ b/templates/flatpages/fp_base.html
@@ -5,6 +5,21 @@
 {% include 'flatpages/head_meta.html' %}
 </head>
 <body>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId: '269167116764908',
+      autoLogAppEvents: true, xfbml: true, version: 'v2.9'
+    });FB.AppEvents.logPageView();
+  };
+  (function(d, s, id){
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) {return;}
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+</script>
   <div class="root">
     <div class="wrapper ">
       {% include 'flatpages/header.html' %}
@@ -19,5 +34,12 @@
       {% include 'flatpages/footer.html' %}
     </div>
   </div>
+<script>
+  $(document).ready(function () {
+    $('.fb-share-btn').click(function () {
+      FB.ui({method:'share',href: $(this).data('shareUrl')},function(response){});
+    })
+  })
+</script>
 </body>
 </html>
