--- a/templates/flatpages/donation.html
+++ b/templates/flatpages/donation.html
@@ -44,7 +44,7 @@
         <li><a href="/impact/">Impact</a></li>
         <li><a href="/events/">Events</a></li>
         <li><a href="/blog/">Blog</a></li>
-        <li class="button-download"><a href="https:&#x2F;&#x2F;itunes.apple.com&#x2F;au&#x2F;app&#x2F;feedmee-discover-food-4-you-eat-out-give-back&#x2F;id1120549992?mt=8" target="_blank">Download</a></li>
+        <li class="button-download"><a href="https://itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8" target="_blank">Download</a></li>
       </ul>
     </div>
     <div class="menu-bg visible-sm visible-xs"></div>
@@ -59,8 +59,8 @@
               <h1>How does the donation work on Feedmee?</h1>
               <p>Every time you book a table or order food delivery through the app, we donate a meal to someone in need.
               </p>
-<a class="button-outline" href="https:&#x2F;&#x2F;itunes.apple.com&#x2F;au&#x2F;app&#x2F;feedmee-discover-food-4-you-eat-out-give-back&#x2F;id1120549992?mt=8"><img src="{% static 'images/apple-logo@2x.png' %}" alt="">AppStore</a>
-<a class="button-outline" href="http:&#x2F;&#x2F;eepurl.com&#x2F;cPK-Ab"><img src="{% static 'images/android-logo@2x.png' %}" alt="">PlayStore</a>
+<a class="button-outline" href="https://itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8"><img src="{% static 'images/apple-logo@2x.png' %}" alt="">AppStore</a>
+<a class="button-outline" href="http://eepurl.com/cPK-Ab"><img src="{% static 'images/android-logo@2x.png' %}" alt="">PlayStore</a>
             </div>
           </div>
         </div>
@@ -131,13 +131,13 @@ $(document).ready(function(){
     <h3>Download Now</h3>
     <ul class="list-unstyled">
       <li>
-        <a href="https:&#x2F;&#x2F;itunes.apple.com&#x2F;au&#x2F;app&#x2F;feedmee-discover-food-4-you-eat-out-give-back&#x2F;id1120549992?mt=8">
+        <a href="https://itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8">
           <img src="{% static 'images/apple-logo@2x.png' %}" alt="AppStore icon">
           <p>AppStore</p>
         </a>
       </li>
       <li>
-        <a href="http:&#x2F;&#x2F;eepurl.com&#x2F;cPK-Ab">
+        <a href="http://eepurl.com/cPK-Ab">
           <img src="{% static 'images/android-logo@2x.png' %}" alt="PlayStore icon">
           <p>PlayStore</p>
         </a>
@@ -176,11 +176,11 @@ $(document).ready(function(){
           <img src="/static/images/feedmee-heart.svg" alt="Feedmee Heart">
         </div>
         <ul class="list-unstyled">
-          <li><a href="https:&#x2F;&#x2F;www.instagram.com&#x2F;feedmeeapp_au&#x2F;"><img src="{% static 'images/instagram.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;www.facebook.com&#x2F;Feedmeeapp&#x2F;"><img src="{% static 'images/facebook.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;twitter.com&#x2F;FeedmeeA"><img src="{% static 'images/twitter.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;www.linkedin.com&#x2F;company-beta&#x2F;13179226&#x2F;"><img src="{% static 'images/linkedin.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;medium.com&#x2F;feedmee-app"><img src="{% static 'images/medium.svg' %}" alt=""></a></li>
+          <li><a href="https://www.instagram.com/feedmeeapp_au/"><img src="{% static 'images/instagram.svg' %}" alt=""></a></li>
+          <li><a href="https://www.facebook.com/Feedmeeapp/"><img src="{% static 'images/facebook.svg' %}" alt=""></a></li>
+          <li><a href="https://twitter.com/FeedmeeA"><img src="{% static 'images/twitter.svg' %}" alt=""></a></li>
+          <li><a href="https://www.linkedin.com/company-beta/13179226/"><img src="{% static 'images/linkedin.svg' %}" alt=""></a></li>
+          <li><a href="https://medium.com/feedmee-app"><img src="{% static 'images/medium.svg' %}" alt=""></a></li>
         </ul>
       </div>
       <div class="term-links">
