--- a/templates/flatpages/head_meta.html
+++ b/templates/flatpages/head_meta.html
@@ -19,3 +19,4 @@
   <script src="{% static 'js/fdme.min.js' %}"></script>
   <link href="https://fonts.googleapis.com/css?family=Muli:400,700" rel="stylesheet">
   <link href="{% static 'css/fdme.min.css' %}" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
