--- a/templates/flatpages/home.html
+++ b/templates/flatpages/home.html
@@ -1,56 +1,11 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Feedmee is a social enterprise. We believe together we can end world hunger. Every time you book a table or order food delivery through the app, we donate a meal to someone in need." />
-  <meta name="keywords" content="" />
-  <meta property="og:image" content="{% static 'images/og-image.jpg' %}" />
-  <meta property="og:image:height" content="312" />
-  <meta property="og:image:width" content="596" />
-  <meta property="og:title" content="Feedmee app | Eat out, give back">
-  <meta property="og:description" content="The food app that helps you give back.  Every time you book a table or order food delivery through the app, we donate a meal to someone in need.">
-  <meta property="og:url" content="www.feedmeeapp.com">
-  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
-  <link rel="manifest" href="/static/favicon/manifest.json">
-  <link rel="mask-icon" href="/static/favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#ffffff">
-  <title>Feedmee</title>
-  <script src="{% static 'js/fdme.min.js' %}"></script>
-  <link href="https://fonts.googleapis.com/css?family=Muli:400,700" rel="stylesheet">
-  <link href="{% static 'css/fdme.min.css' %}" rel="stylesheet" />
-</head>
+{% include 'flatpages/head_meta.html' %}
 <body class="home">
   <div class="root">
     <div class="wrapper ">
-<header class="section-header">
-  <div class="container">
-    <div class="logo">
-      <a href="/"><img src="{% static 'images/logo.svg' %}" alt="Feedmee"></a>
-    </div>
-    <button type="button" class="navbar-toggle burger visible-sm visible-xs">
-        <div class="burger-wrapper">
-            <div class="x"></div>
-            <div class="y"></div>
-            <div class="z"></div>
-        </div>
-        <p>Menu</p>
-    </button>
-    <div class="main-menu">
-      <ul class="list-unstyled list-inline">
-        <li><a href="/impact/">Impact</a></li>
-        <li><a href="/events/">Events</a></li>
-        <li><a href="/blog/">Blog</a></li>
-        <li class="button-download"><a href="https:&#x2F;&#x2F;itunes.apple.com&#x2F;au&#x2F;app&#x2F;feedmee-discover-food-4-you-eat-out-give-back&#x2F;id1120549992?mt=8" target="_blank">Download</a></li>
-      </ul>
-    </div>
-    <div class="menu-bg visible-sm visible-xs"></div>
-  </div>
-</header>
-<!-- end: .section-header -->
+      {% include 'flatpages/header.html' %}
       <main id="main">
         <div class="section-opening">
           <div class="container">
@@ -61,8 +16,8 @@
                 table or order food delivery through the app, we
                 donate a meal to someone in need.</p>
 
-<a class="button-outline" href="https:&#x2F;&#x2F;itunes.apple.com&#x2F;au&#x2F;app&#x2F;feedmee-discover-food-4-you-eat-out-give-back&#x2F;id1120549992?mt=8"><img src="{% static 'images/apple-logo@2x.png' %}" alt="">AppStore</a>
-<a class="button-outline" href="http:&#x2F;&#x2F;eepurl.com&#x2F;cPK-Ab"><img src="{% static 'images/android-logo@2x.png' %}" alt="">PlayStore</a>
+<a class="button-outline" href="https://itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8"><img src="{% static 'images/apple-logo@2x.png' %}" alt="">AppStore</a>
+<a class="button-outline" href="http://eepurl.com/cPK-Ab"><img src="{% static 'images/android-logo@2x.png' %}" alt="">PlayStore</a>
               <div class="featured-image">
                 <p>FEATURED IN</p>
                 <img src="{% static 'images/yahoo-logo@2x.png' %}" alt="Yahoo">
@@ -164,13 +119,13 @@ $(document).ready(function(){
     <h3>Download Now</h3>
     <ul class="list-unstyled">
       <li>
-        <a href="https:&#x2F;&#x2F;itunes.apple.com&#x2F;au&#x2F;app&#x2F;feedmee-discover-food-4-you-eat-out-give-back&#x2F;id1120549992?mt=8">
+        <a href="https://itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8">
           <img src="{% static 'images/apple-logo@2x.png' %}" alt="AppStore icon">
           <p>AppStore</p>
         </a>
       </li>
       <li>
-        <a href="http:&#x2F;&#x2F;eepurl.com&#x2F;cPK-Ab">
+        <a href="http://eepurl.com/cPK-Ab">
           <img src="{% static 'images/android-logo@2x.png' %}" alt="PlayStore icon">
           <p>PlayStore</p>
         </a>
@@ -180,51 +135,7 @@ $(document).ready(function(){
 </div>
 <!-- end: .section-store -->
       </main>
-<footer class="section-footer">
-  <div class="footer-links">
-    <div class="container">
-      <div class="list-links">
-        <h4>What we do</h4>
-        <ul>
-          <li><a href="/impact/">Impact</a></li>
-          <li><a href="/events/">Events</a></li>
-          <li><a href="/blog/">Blog</a></li>
-          <li><a href="https://itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8">Download</a></li>
-        </ul>
-      </div>
-      <div class="list-links">
-        <h4>About us</h4>
-        <ul>
-          <li><a href="/team/">Team</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- end: .footer-links -->
-  <div class="footer-bottom">
-    <div class="container">
-      <div class="social-links">
-        <div class="logo-icon">
-          <img src="/static/images/feedmee-heart.svg" alt="Feedmee Heart">
-        </div>
-        <ul class="list-unstyled">
-          <li><a href="https:&#x2F;&#x2F;www.instagram.com&#x2F;feedmeeapp_au&#x2F;"><img src="{% static 'images/instagram.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;www.facebook.com&#x2F;Feedmeeapp&#x2F;"><img src="{% static 'images/facebook.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;twitter.com&#x2F;FeedmeeA"><img src="{% static 'images/twitter.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;www.linkedin.com&#x2F;company-beta&#x2F;13179226&#x2F;"><img src="{% static 'images/linkedin.svg' %}" alt=""></a></li>
-          <li><a href="https:&#x2F;&#x2F;medium.com&#x2F;feedmee-app"><img src="{% static 'images/medium.svg' %}" alt=""></a></li>
-        </ul>
-      </div>
-      <div class="term-links">
-        <ul class="list-unstyled">
-          <li><a href="/privacy/">Privacy</a></li>
-          <li><a href="/terms/">Term of Use</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- end: .footer-bottom -->
-</footer>
+{% include 'flatpages/footer.html' %}
     </div>
     <!-- end: .wrapper -->
   </div>
