--- a/templates/flatpages/fp_base.html
+++ b/templates/flatpages/fp_base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
 {% include 'flatpages/head_meta.html' %}
+  {% block extra_headers %}{% endblock %}
 </head>
 <body>
 <script>
