--- a/blog/templates/blog_list.html
+++ b/blog/templates/blog_list.html
@@ -15,12 +15,14 @@
 {% block content %}
 {% for post in posts %}
   <div class="blog-card container">
-    <div class="col-sm-7"><img src="{{post.image_url}}" class="img-responsive"></div>
+    <div class="col-sm-7">
+      <a href="/blog/{{post.slug}}/"><img src="{{post.image_url}}" class="img-responsive"></a>
+    </div>
     <div class="col-sm-5">
-      <h3>{{post.title}}</h3>
+      <a href="/blog/{{post.slug}}/"><h3>{{post.title}}</h3></a>
       <h3 class="blog-post-card-date"><small>{{post.created|date:"d M Y"}}</small></h3>
       <div class="blog-post-content">
-        {{post.content|striptags|truncatewords:50 }}&hellip;
+        {{post.content|striptags|truncatewords:30 }}
       </div><br>
       <a href="/blog/{{post.slug}}/">Read more</a>
     </div>
