--- a/common-static/css/blog.css
+++ b/common-static/css/blog.css
@@ -53,15 +53,6 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.blog-post-app-promo-img {
-    background-position: center;
-    background-size: cover;
-    padding: 50px;
-}
-.blog-post-app-promo-img p {
-    color: #FFF !important;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
-}
 .share-block {
     margin-top: 15px;
 }
@@ -93,17 +84,71 @@ body {
 .blog-card a {
     color:#cd0a13;
 }
+.blog-post-app-promo-img {
+    background-position: center;
+    background-size: cover;
+    padding: 50px;
+    overflow: hidden;
+}
+.blog-post-app-promo-img .col-sm-6.col-sm-push-6 {
+    padding-top: 70px;
+}
+.blog-post-app-promo-img p {
+    color: #FFF !important;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+}
+.blog-post-app-promo-img p.lead {
+    font-size: 27px;
+    margin-bottom: 10px;
+}
 .blog-post-app-promo-img img.img-responsive {
     transform: rotate(25deg);
-    height: 275px;
-    margin-top: -15px;
-    margin-bottom: -30px;
-    margin-right: auto;
-    margin-left: auto;
+    height: 310px;
+    margin: -50px auto;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.4);
-    border-radius: 20px;
+    border-radius: 10%;
+}
+@media (max-width: 767px) {
+    .blog-card > div:first-child {
+        margin-left: -15px;
+        margin-right: -15px;
+        padding-right: 0;
+        padding-left: 0;
+    }
+    .blog-post-app-promo {
+        margin-left: -75px;
+        margin-right: -75px;
+        padding-left: 0;
+        padding-right: 0;
+        border: none;
+        border-bottom: 1px solid #eee;
+    }
+    .blog-post-app-promo-img {
+        padding: 25px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .blog-post-app-promo-img img.img-responsive {
+        transform: none;
+        margin-top: 20px;
+        margin-bottom: -60px;
+        height: 80vh;
+    }
+    .blog-post-app-promo-img .col-sm-6.col-sm-push-6 {
+        padding-top: 10px;
+        text-align: center;
+    }
+    .share-block {
+        text-align: center;
+    }
 }
 @media (max-width: 480px) {
+    .blog-post-app-promo {
+        margin-top: 40px;
+        text-align: center;
+        margin-left: -45px;
+        margin-right: -45px;
+    }
     .section-opening:before {
         height: 250px;
     }
