--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -6,14 +6,10 @@
       <h1>User Engagement</h1>
     </div>
   </div>
-  <div class="row">
-    <div class="col-sm-12">
-      <h2>User Swipes</h2>
-    </div>
-  </div>
   <br><bR>
   <div class="row">
     <div class="col-sm-12">
+      <h3>Dish Swipes <br><small>All time</small></h3>
       <table class="table table-striped table-bordered table-rounded">
         <thead>
           <th>Over 100 Swipes</th>
@@ -43,6 +39,7 @@
   <br><bR>
   <div class="row">
     <div class="col-sm-12">
+      <h3>Dish Swipes</h3>
       <table class="table table-striped table-bordered table-rounded">
         <thead>
           <th>Over 100 Swipes</th>
@@ -52,6 +49,23 @@
           <th>0 Swipes</th>
         </thead>
         <tbody id='swipes-body-new'>
+
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h3>Recipe Swipes</h3>
+      <table class="table table-striped table-bordered table-rounded">
+        <thead>
+        <th>Over 100 Swipes</th>
+        <th>50 - 99 Swipes</th>
+        <th>20 - 49 Swipes</th>
+        <th>1 - 19 Swipes</th>
+        <th>0 Swipes</th>
+        </thead>
+        <tbody id='rswipes-body-new'>
 
         </tbody>
       </table>
@@ -75,6 +89,12 @@
       <h2 id='new-swipes'></h2>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <h2><small>New recipe swipes</small></h2>
+      <h2 id="new-rswipes"></h2>
+    </div>
+  </div>
 </div>
 <script>
 function get_users() {
@@ -82,34 +102,37 @@ function get_users() {
     $('#total-users').text(data.users)
   })
 }
-function get_engagement(endpoint, target, callback) {
+function get_engagement(endpoint, prop_name, target, callback) {
   $.getJSON('/api/reporting/'+endpoint+'/', function (data) {
     var first_row = '<tr>';
     var second_row = '<tr>';
-    for (var i=0; i<data.swipes.count.length; i++) {
-      first_row += '<td>' + data.swipes.count[i] + '</td>';
-      second_row += '<td>' + data.swipes.percent[i] + '%</td>';
+    for (var i=0; i<data[prop_name].count.length; i++) {
+      first_row += '<td>' + data[prop_name].count[i] + '</td>';
+      second_row += '<td>' + data[prop_name].percent[i] + '%</td>';
     }
     first_row += '</tr>';
     second_row += '</tr>';
-    $(target).html(first_row+second_row)
+    $(target).html(first_row+second_row);
+
     if (typeof callback === 'function') callback(data)
   })
 }
 function get_recent() {
-  get_engagement('recent', '#swipes-body-new', function (data) {
-    $('#new-users').text(data.new_signups)
-    $('#new-queries').text(data.new_queries)
-    $('#new-swipes').text(data.new_swipes)
-    $('#recent-users').text(data.recent_users)
+  get_engagement('recent', 'swipes', '#swipes-body-new', function (data) {
+    $('#new-users').text(data.new_signups);
+    $('#new-queries').text(data.new_queries);
+    $('#new-swipes').text(data.new_swipes);
+    $('#new-rswipes').text(data.new_rswipes);
+    $('#recent-users').text(data.recent_users);
   })
+  get_engagement('recent', 'recipe_swipes', '#rswipes-body-new')
 }
 $(document).ready(function () {
-  get_engagement('engagement', '#swipes-body');
-  get_recent()
-  get_users()
-  setInterval(get_users, 15000)
-  setInterval(get_recent, 300000)
+  get_engagement('engagement', 'swipes', '#swipes-body');
+  get_recent();
+  get_users();
+  setInterval(get_users, 15000);
+  setInterval(get_recent, 300000);
 })
 </script>
 {% endblock %}
