--- a/main/templates/app_base.html
+++ b/main/templates/app_base.html
@@ -1,15 +1,36 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel='stylesheet' href="{% static 'css/main.css' %}">
-    <link rel='stylesheet' href="{% static 'css/font-awesome.min.css' %}">
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,900&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-    <title>Feedmee{% block page-title %}{%endblock%}</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="{{ meta_description|default:"Feedmee is a social enterprise. We believe together we can end world hunger. Every time you book a table or order food delivery through the app, we donate a meal to someone in need." }}" />
+  <meta name="og:description" content="{{ meta_description|default:"Feedmee is a social enterprise. We believe together we can end world hunger. Every time you book a table or order food delivery through the app, we donate a meal to someone in need." }}"" />
+  <meta property="og:title" content="Feedmee{{ page_title }}">
+  <meta property="og:image" content="{{ meta_img }}" />
+  <meta property="og:image" content="{{ meta_img }}" />
+  <meta property="og:image:url" content="{{ meta_img }}" />
+  <meta property="og:image:secure_url" content="{{ meta_img }}" />
+  <meta property="og:image:type" content="image/jpg" />
+  <meta property="og:image:alt" content="{{meta_img_alt}}" />
+  <meta property="og:url" content="{{request.build_absolute_uri}}" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  {% if app_url %}
+    <meta property="al:ios:url" content="{{ app_url }}" />
+  {% endif %}
+  <meta property="al:ios:app_store_id"content="1120549992" />
+  <meta property="al:ios:app_name" content="Feedmee" />
+  <link rel='stylesheet' href="{% static 'css/main.css' %}">
+  <link rel='stylesheet' href="{% static 'css/font-awesome.min.css' %}">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,900&amp;subset=latin-ext,vietnamese" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+  <link rel="manifest" href="/static/favicon/manifest.json">
+  <link rel="mask-icon" href="/static/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
+  <title>Feedmee{% block page-title %}{%endblock%}</title>
+</head>
   <body>
     <style>
 
