--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -102,37 +102,42 @@ function get_users() {
     $('#total-users').text(data.users)
   })
 }
-function get_engagement(endpoint, prop_name, target, callback) {
+function build_table(prop_name, target, data) {
+  var first_row = '<tr>';
+  var second_row = '<tr>';
+  for (var i=0; i<data[prop_name].count.length; i++) {
+    first_row += '<td>' + data[prop_name].count[i] + '</td>';
+    second_row += '<td>' + data[prop_name].percent[i] + '%</td>';
+  }
+  first_row += '</tr>';
+  second_row  += '</tr>';
+  $(target).html(first_row+second_row);
+}
+function get_engagement(endpoint, prop_names, targets,callback) {
   $.getJSON('/api/reporting/'+endpoint+'/', function (data) {
-    var first_row = '<tr>';
-    var second_row = '<tr>';
-    for (var i=0; i<data[prop_name].count.length; i++) {
-      first_row += '<td>' + data[prop_name].count[i] + '</td>';
-      second_row += '<td>' + data[prop_name].percent[i] + '%</td>';
+    for (var i=0; i<prop_names.length; i++) {
+      build_table(prop_names[i], targets[i], data)
     }
-    first_row += '</tr>';
-    second_row += '</tr>';
-    $(target).html(first_row+second_row);
-
     if (typeof callback === 'function') callback(data)
   })
 }
 function get_recent() {
-  get_engagement('recent', 'swipes', '#swipes-body-new', function (data) {
+  get_engagement('recent',
+      ['swipes', 'recipe_swipes'],
+      ['#swipes-body-new', '#rswipes-body-new'], function (data) {
     $('#new-users').text(data.new_signups);
     $('#new-queries').text(data.new_queries);
     $('#new-swipes').text(data.new_swipes);
     $('#new-rswipes').text(data.new_rswipes);
     $('#recent-users').text(data.recent_users);
   })
-  get_engagement('recent', 'recipe_swipes', '#rswipes-body-new')
 }
 $(document).ready(function () {
-  get_engagement('engagement', 'swipes', '#swipes-body');
+  get_engagement('engagement', ['swipes'], ['#swipes-body']);
   get_recent();
   get_users();
-  setInterval(get_users, 15000);
-  setInterval(get_recent, 300000);
+  setInterval(get_users, 45000);
+  setInterval(get_recent, 15000);
 })
 </script>
 {% endblock %}
