--- a/main/templates/app_base.html
+++ b/main/templates/app_base.html
@@ -32,9 +32,21 @@
   <title>Feedmee{% block page-title %}{%endblock%}</title>
 </head>
   <body>
-    <style>
-
-    </style>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId: '269167116764908',
+          autoLogAppEvents: true, xfbml: true, version: 'v2.9'
+        });FB.AppEvents.logPageView();
+      };
+      (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-navbar">
         <div class="row">
           <ul class="nav navbar-nav mr-auto">
@@ -51,5 +63,12 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function () {
+        $('.fb-share-btn').click(function () {
+          FB.ui({method:'share',href: $(this).data('shareUrl')},function(response){});
+        })
+      })
+    </script>
   </body>
 </html>
