--- a/webapp/templates/recipe.html
+++ b/webapp/templates/recipe.html
@@ -19,23 +19,37 @@
       }, 1000);
     </script>
   {% endif %}
-  <div id="restaurant-header-img" class="visible-xs container"
+  <div id="restaurant-header-img" class="d-lg-none container"
        style="background-image: url({{recipe.image_url}})"></div>
+  <div class="container text-center card d-none d-lg-block">
+    <div class="card-block">
+      <img class="d-inline text-center" src="{{ recipe.image_url }}">
+    </div>
+  </div>
   <div class="container text-center card">
     <div class="card-block">
-      <h3 class="fm-typog fm-typog-red">{{recipe.name}}</h3>
-      <p class="text-muted">{{recipe.description}}</p>
-      <p>Recipe from <a href="{{ recipe.source_url }}" target="_blank">{{ recipe.source_url }}</a></p>
-      <ul class="list-inline share-block">
-        <li class="title hidden-xs"><strong>Share recipe</strong></li>
-        <li class="list-inline-item">{% post_to_facebook '' %}</li>
-        <li class="list-inline-item">{% post_to_gplus '' %}</li>
-        <li class="list-inline-item">{% post_to_twitter recipe.name '' %}</li>
-        <li class="list-inline-item">{% post_to_linkedin recipe.name '' %}</li>
-        <li class="hidden-xs list-inline-item">
-          {% send_email recipe.name recipe.description|truncatewords_html:30|striptags '' %}
-        </li>
-      </ul>
+      <div class="row">
+        <div class="col-md-6 text-xs-center text-left">
+          <h3 class="fm-typog fm-typog-red">{{recipe.name}}</h3>
+          <p class="text-muted">{{recipe.description}}</p>
+          <p>Recipe from <a href="{{ recipe.source_url }}" target="_blank">{{ recipe.source_url }}</a></p>
+        </div>
+        <div class="col-md-6">
+          <ul class="list-inline share-block text-xs-center text-left">
+            <li class="title"><strong>Share recipe</strong></li>
+            <li class="list-inline-item">{% post_to_facebook '' %}</li>
+            <li class="list-inline-item">{% post_to_gplus '' %}</li>
+            <li class="list-inline-item">{% post_to_twitter recipe.name '' %}</li>
+            <li class="list-inline-item">{% post_to_linkedin recipe.name '' %}</li>
+            <li class="list-inline-item  d-none d-md-inline-block">
+              {% send_email recipe.name recipe.description|truncatewords_html:30|striptags '' %}
+            </li>
+            <li class="list-inline-item" style="margin-left: 15px;">
+              <a href="#" class="btn btn-red-hollow"><i class="fa fa-heart-o"></i><span class="hidden-md-down"> Save Recipe</span></a></li>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
   <div class="card-margin card container container-padded text-center">
@@ -43,11 +57,11 @@
       <div class="row"><br>
         <div class="col-3">
           <strong>Prep Time</strong><br>
-          <span>{% widthratio recipe.prep_time_seconds 60 1 %}</span>
+          <span>{% widthratio recipe.prep_time_seconds 60 1 %} mins</span>
         </div>
         <div class="col-3">
           <strong>Cook Time</strong><br>
-          <span>{% widthratio recipe.cook_time_seconds 60 1 %}</span>
+          <span>{% widthratio recipe.cook_time_seconds 60 1 %} mins</span>
         </div>
         <div class="col-3">
           <strong>Servings</strong><br>
@@ -62,15 +76,20 @@
   </div>
   <div class="card-margin card container">
     <div class="card-block">
-      <h4 style="color:#000;" class="fm-typog">Ingredients</h4>
-      <ul class="list-group">
-        {% for ingredient in recipe.ingredients.all %}
-          {% include 'ingredient.html' %}
-        {% endfor %}
-      </ul>
-    <hr>
-    <h4 class="fm-typog">Directions</h4>
-    Directions from <a href="{{ recipe.source_url }}" target="_blank">{{ recipe.source_url }}</a>
+      <div class="row">
+        <div class="col-md-6">
+          <h4 style="color:#000;" class="fm-typog">Ingredients</h4>
+          <ul class="list-group">
+            {% for ingredient in recipe.ingredients.all %}
+              {% include 'ingredient.html' %}
+            {% endfor %}
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <h4 class="fm-typog">Directions</h4>
+          Directions from <a href="{{ recipe.source_url }}" target="_blank">{{ recipe.source_url }}</a>
+        </div>
+      </div>
     </div>
   </div>
 {% endblock %}
