font awesome CDN hotfix

--- a/main/templates/app_base.html
+++ b/main/templates/app_base.html
@@ -21,7 +21,7 @@
   <meta property="al:ios:app_store_id"content="1120549992" />
   <meta property="al:ios:app_name" content="Feedmee" />
   <link rel='stylesheet' href="{% static 'css/main.css' %}">
-  <link rel='stylesheet' href="{% static 'css/font-awesome.min.css' %}">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Muli:400,900&amp;subset=latin-ext,vietnamese" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
