New scraper data entry review system. Updates to web app.

--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -16,11 +16,21 @@ body {
 .TA_selfserveprop {
     display: inline-block;
 }
-.dish-card > .card-img-top {
+.dish-card .card-img-top {
   width: 100%;
   padding-bottom: 65%;
   background-size: cover;
   background-position: center center;
+}
+.card.dish-card {
+  display: inline-block;
+}
+.card.dish-card .card-title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 198px;
+  display: inline-block;
+  overflow: hidden;
 }
 a.share-link {
   color: #000;
