--- a/webapp/templates/restaurant.html
+++ b/webapp/templates/restaurant.html
@@ -5,100 +5,7 @@
 {% block title %} | {{restaurant.name}}{% endblock %}
 
 {% block content %}
-<div id="restaurant-header-img" class="container"
-     style="background-image: url({{restaurant.image_url}})"></div>
-<div class="container-padded">
-  <h3 class="fm-typog">About {{restaurant.name}}</h3>
-  <p>{{restaurant.information}}</p>
-  <div class="text-center center-block">
-    {{restaurant.tripadvisor_widget|safe}}
-  </div>
-</div>
-<hr>
-<div class="container-padded">
-  <h5>Popular from {{restaurant.name}}</h5>
-  {% for dish in restaurant.dishes.all %}
-  <div class="card dish-card" style="width: 15rem;">
-    <div class="card-img-top" style="background-image: url({{dish.image_url}})">
-
-    </div>
-    <div class="card-block">
-      <h7 class="card-title">{{dish.title}}</h7>
-    </div>
-  </div>
-  {% endfor %}
-</div>
-<hr style="margin-bottom:0">
-<iframe width="100%" height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q={{restaurant.address|urlencode}}&key=AIzaSyD43bZIYjqsoDW4ftvZBImQjIZpozBYgrE"></iframe>
-</div>
-<hr style="margin-top:0">
-<div class="container-padded text-right">
-  <a href="https://m.uber.com/ul/?client_id={{uber.clientid}}&action=setPickup&dropoff[latitude]={{restaurant.latitude}}&dropoff[longitude]={{restaurant.longitude}}&dropoff[nickname]={{rrestaurant.name|urlencode}}&dropoff[formatted_address]={{restaurant.address|urlencode}}&product_id=a1111c8c-c720-46c3-8534-2fcdd730040d&link_text=View%20team%20roster&partner_deeplink=partner%3A%2F%2Fteam%2F9383" class="share-link">UBER <i class="fa fa-share" aria-hidden="true"></i></a>
-</div>
-<hr>
-<div class="container">
-  <h3 class="fm-typog">More info</h3>
-
-  <div id="more-info-accordion" role="tablist" aria-multiselectable="true">
-    <div class="card">
-      <div class="card-header" role="tab" id="headingOne">
-        <h5 class="mb-0">
-          <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            Cuisine <span class="pull-right text-danger"><i class="fa fa-plus" aria-hidden="true"></i></span>
-          </a>
-        </h5>
-      </div>
-      <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
-        <div class="card-block">
-          {% for cuisine in restaurant.cuisines.all %}
-          {{cuisine.name}}<br>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-header" role="tab" id="headingOne">
-        <h5 class="mb-0">
-          <a data-toggle="collapse" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-            Opening Hours <span class="pull-right text-danger"><i class="fa fa-plus" aria-hidden="true"></i></span>
-          </a>
-        </h5>
-      </div>
-      <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingOne">
-        <div class="card-block">
-          <table class="opening-times">
-          {% for openingtime in opening_times %}
-            <tr>
-              <td>{{openingtime.0}}</td>
-              <td>{{openingtime.1}}</td>
-              <td>&ndash;</td>
-              <td>{{openingtime.2}}</td>
-            </tr>
-          {% endfor %}
-          </table>
-        </div>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-header" role="tab" id="headingOne">
-        <h5 class="mb-0">
-          <a data-toggle="collapse" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-            Other options <span class="pull-right text-danger"><i class="fa fa-plus" aria-hidden="true"></i></span>
-          </a>
-        </h5>
-      </div>
-      <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingOne">
-        <div class="card-block">
-          {% for option in restaurant.highlights.all %}
-          {{option}}<br>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+{% include 'partials/restaurant-detail.html' %}
 <hr style="margin-bottom:0">
 <footer class="bg-grey text-center">
   <ul class="list-inline" style="margin-bottom:0">
