Added GA code to flatpages, which aren't using partials!

--- a/templates/flatpages/events.html
+++ b/templates/flatpages/events.html
@@ -24,6 +24,7 @@
   <link href="{% static 'css/fdme.min.css' %}" rel="stylesheet" />
 </head>
 <body class="events">
+  {% include 'flatpages/body_scripts.html' %}
   <div class="root">
     <div class="wrapper ">
 <header class="section-header">
