--- a/templates/flatpages/home.html
+++ b/templates/flatpages/home.html
@@ -3,6 +3,7 @@
 <html lang="en">
 {% include 'flatpages/head_meta.html' %}
 <body class="home">
+  {% include 'flatpages/body_scripts.html' %}
   <div class="root">
     <div class="wrapper ">
       {% include 'flatpages/header.html' %}
