Update team page. Add CSV export for RecipeIngredients and Recipes.

--- a/templates/flatpages/team.html
+++ b/templates/flatpages/team.html
@@ -161,22 +161,12 @@
 </div>
 <div class="team-list">
   <div class="team-image">
-    <img src="{% static 'images/emilio.jpg' %}" alt="Emilio Marchena">
+    <img src="{% static 'images/tomk.jpg' %}" alt="Tom Kooy">
   </div>
   <div class="team-desc">
-    <h3>Emilio Marchena</h3>
-    <p>Data Science</p>
-    <a href="https://www.linkedin.com/in/emilio-carnicero-marchena-5090732/"target="_blank"><img src="{% static 'images/linkedin-color.svg' %}" alt="linkedin"></a>
-  </div>
-</div>
-<div class="team-list">
-  <div class="team-image">
-    <img src="{% static 'images/marcus.jpg' %}" alt="Marcus Holmes">
-  </div>
-  <div class="team-desc">
-    <h3>Marcus Holmes</h3>
-    <p>Public Relations</p>
-    <a href="https://www.linkedin.com/in/gentlemantech/"target="_blank"><img src="{% static 'images/linkedin-color.svg' %}" alt="linkedin"></a>
+    <h3>Tom Kooy</h3>
+    <p>Business Advisor</p>
+    <a href="https://www.linkedin.com/in/tom-kooy-14ba3b73/"target="_blank"><img src="{% static 'images/linkedin-color.svg' %}" alt="linkedin"></a>
   </div>
 </div>
               </div>
