Hotfix download url.

--- a/templates/flatpages/header.html
+++ b/templates/flatpages/header.html
@@ -17,7 +17,7 @@
         <li><a href="/impact/">Impact</a></li>
         <li><a href="/events/">Events</a></li>
         <li><a href="/blog/">Blog</a></li>
-        <li class="button-download"><a href="https:/itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8" target="_blank">Download</a></li>
+        <li class="button-download"><a href="https://itunes.apple.com/au/app/feedmee-discover-food-4-you-eat-out-give-back/id1120549992?mt=8" target="_blank">Download</a></li>
       </ul>
     </div>
     <div class="menu-bg visible-sm visible-xs"></div>
