--- a/templates/flatpages/team.html
+++ b/templates/flatpages/team.html
@@ -165,7 +165,7 @@
   </div>
   <div class="team-desc">
     <h3>Tom Kooy</h3>
-    <p>Business Advisor</p>
+    <p>Board &amp; Strategic Advisory</p>
     <a href="https://www.linkedin.com/in/tom-kooy-14ba3b73/"target="_blank"><img src="{% static 'images/linkedin-color.svg' %}" alt="linkedin"></a>
   </div>
 </div>
